overhauled game to use bitmap images for graphics (get fucked pre-compiled put pixel functions)

--- a/Engine/Engine.vcxproj
+++ b/Engine/Engine.vcxproj
@@ -159,6 +159,7 @@
     <ClInclude Include="Vei2.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="Colors.cpp" />
     <ClCompile Include="Dude.cpp" />
     <ClCompile Include="DXErr.cpp" />
     <ClCompile Include="FrameTimer.cpp" />
